--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,4 +1,20 @@
 :root {
-  --blue: #3290f2;
-  --gray: gray;
+  --primary-0: #fff;
+  --primary-200: rgba(186, 200, 255, 1);
+  --primary-500: #3290f2;
+  --primary-600: #3d53db;
+  --primary-700: #2a3bb7;
+  --secondary-200: #f5f5f7;
+  --secondary-300: #a1a1aa;
+  --secondary-400: #54577a;
+  --secondary-500: #141522;
+  --error-600: #db2719;
+  --error-500: #ff4423;
+
+  --mobileS: 320px;
+  --mobileM: 375px;
+  --mobileL: 425px;
+  --tablet: 768px;
+  --laptop: 1024px;
+  --laptopL: 1440px;
 }
