fix: the podium is made

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,7 @@
 @import './libs.scss';
 @import './vars.scss';
 
-.wrapper-main {
+.wrapper-bg-blue {
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
