--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,7 +4,7 @@
   --primary-500: #3290f2;
   --primary-600: #3d53db;
   --primary-700: #2a3bb7;
-  --secondary-200: #f5f5f7;
+  --secondary-200: #e4e4e7;
   --secondary-300: #a1a1aa;
   --secondary-400: #54577a;
   --secondary-500: #141522;
