--- a/src/screens/Create/components/EditQuestion/EditQuestion.module.scss
+++ b/src/screens/Create/components/EditQuestion/EditQuestion.module.scss
@@ -1,4 +1,73 @@
 .wrapper {
   flex-grow: 1;
   background-color: var(--primary-500);
+  display: flex;
+  padding-block: 2rem 3rem;
+  position: relative;
+  overflow-y: hidden;
+}
+
+.container {
+  flex-basis: 900px;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.top {
+  color: var(--primary-0);
+  display: flex;
+  flex-direction: column;
+}
+
+.text {
+  text-align: center;
+  line-height: 1.3;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+
+  &::placeholder {
+    text-align: center;
+  }
+}
+
+.file {
+  max-width: 500px;
+  min-width: 300px;
+  margin-top: 1rem;
+  margin-inline: auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+  display: flex;
+  padding: 10px;
+
+  & > * {
+    border-radius: 4px;
+  }
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.addOption {
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  color: white;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 2px 4rem;
+  border-radius: 8px 8px 0 0;
+  transition: all 0.2s ease;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 }
