fix: the editor has been improved

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -10,6 +10,7 @@
   --secondary-500: #141522;
   --error-600: #db2719;
   --error-500: #ff4423;
+  --success-600: #28a745;
 
   --mobileS: 320px;
   --mobileM: 375px;
