--- a/src/components/Cards/Quiz/QuizCard.module.scss
+++ b/src/components/Cards/Quiz/QuizCard.module.scss
@@ -26,7 +26,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   margin-top: 1.5rem;
 }
 
